# sas-core

./: README.md  requirements.txt  setup_env.sh
bridge/: Cargo.toml  README.md
circuits/: biometric_prover.zk
contracts/: sas_core.compact
docs/: ARCHITECTURE.md
sentinel/: sentinel.py
tee-worker/src/: main.rs
ui/: README.md
