[package]
name = "supernova-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Supernova Contributors"]
description = "Middleware for injecting Midnight ZK Proofs into C2PA Manifests."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# C2PA Standard Library (Adobe/CAI)
# Core dependency for C2PA manifest injection and signing.
c2pa = { version = "0.25.0", features = ["file_io", "add_thumbnails"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (for local certificate handling)
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4"
